# TuneForge

./: .gitignore  CHANGELOG.md  README.md  config.env  config.env.example  pyproject.toml  strict-json-machine.config  test.py  train-and-convert.sh
configs/: cynical-dev.config.env  strict-json-machine.config
data/: cynical-senior-dev.jsonl  qa-eval-results.jsonl  qa-eval.jsonl  qa-training.jsonl  strict-json-machine.jsonl  train.jsonl
scripts/: README.md  create_eval_dataset.py
src/: merge.py  trainer.py
tuneforge/: __init__.py  cli.py
