[project]
name = "tuneforge"
version = "0.1.0"
description = "Automated pipeline for fine-tuning LLMs with LoRA and deploying to Ollama"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "transformers>=4.44",
    "datasets>=2.20",
    "peft>=0.12",
    "accelerate>=0.34",
    "trl>=0.9.6",
]

[project.scripts]
tuneforge = "tuneforge.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
